    http://stackoverflow.com/questions/1276029/non-blocking-stdio

5.2
    TODO: Update documentation, do a better job of explaining exactly how the Status Menu interface works
    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Fix status menu output issue
    TODO: Clicked row contextual menu handling
    TODO: Fix issue where "Use as template" is shown even though Status Item mode is "Text"

    * Got rid of the TMP_STDIN_PATH hack
    * The Platypus Profile format has changed slightly in this version, but old formats can still be read
    * Fixed issue where valid menu items were disabled in Action menu
    * Updated documentation & man page, remove refs to options that are gone (text encoding, secure script)
    * Fixed issue with console spamming due to missing CFBundleTypeRole
    * Fixed bug where text settings were not properly loaded by the GUI
    * Fixed bug where bundling files with the -f flag didn't work in the command line tool
    * Fixed bug where the command line tool would erroneously try to validate whole argument strings instead of individual UTI strings
    * Fixed bug where suffix editing buttons remained enabled when they shouldn't be
    * Got rid of text encoding settings. Platypus now uses UTF8, and you should too.
    * Got rid of "Secure bundled script" option, which was useless bullshit anyway
    * Bundled files table view now uses combined image and text cell instead of two columns
    * Renamed Advanced menu to Action
    * Fixed issue where main application window would not remember its last position

5.1
    * New Build All Examples feature
    * ScriptExec windows now remember window size and position between launches
    * Fixed issue where MainMenu.nib was stripped and thus not editable using XCode
    * Smarter handling of dropped files via more intelligent methods to determine if a file is a script